# ContactList

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/inc/: component.h  contact.h  contact_list_provider.h  contact_widget.h  general_screen.h  mainwindow.h  mediator.h  new_contact_screen.h
app/resources/: qmain.qss  resources.qrc
app/src/: component.cpp  contact.cpp  contact_list_provider.cpp  contact_widget.cpp  general_screen.cpp  main.cpp  mainwindow.cpp  mediator.cpp  new_contact_screen.cpp
